# cookiecutter-fastapi

./: .flake8  .hgignore  Makefile  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: continuos-integration.yml
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .env.development  .env.testing  .flake8  .hgignore  Dockerfile  Makefile  docker-compose.yml  hypercorn.toml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: continuos-integration.yml
{{cookiecutter.project_slug}}/app/: authentication.py  config.py  database_utils.py  mailer.py  main.py  middlewares.py  resources.py  sessions.py  utils.py
{{cookiecutter.project_slug}}/app/models/: __init__.py  user.py
{{cookiecutter.project_slug}}/app/routers/: confirmation.py  login.py  user.py
{{cookiecutter.project_slug}}/app/schemas/: user.py
{{cookiecutter.project_slug}}/app/templates/: email_confirmation.en.html  email_confirmation.en.txt  email_confirmation.pt-br.html  email_confirmation.pt-br.txt  register_user.en.html  reset_password.en.html  reset_password.en.txt  reset_password.pt-br.html  reset_password.pt-br.txt
{{cookiecutter.project_slug}}/tests/: conftest.py  populate_database.py  test_conftest_rollback.py  test_middlewares.py  test_schemas.py  test_session.py  test_sessions.py  utils.py
{{cookiecutter.project_slug}}/tests/routers/: test_confirmation.py  test_login.py  test_user.py
