[tool.poetry]
name = "cookiecutter-fastapi"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.9"
blue = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
flake8-rst = "*"
isort = "*"
mypy = "*"

[tool.poetry.dev-dependencies]
types-orjson = "^0.1.1"
types-Jinja2 = "^2.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 82

[tool.blue]
line-length = 82
