[tool.poetry]
name = "Projeto"
version = "0.1.0"
description = ""
authors = [" <>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aioredis = {extras = ["hiredis"], version = "*", allow-prereleases = true}
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
Hypercorn = "*"
loguru = "*"
orjson = "*"
passlib = {extras = ["argon2"], version = "*"}
python = "^3.9"
uvloop = "*"
tenacity = "*"
psycopg2 = "*"


[tool.poetry.dev-dependencies]
alt-pytest-asyncio = "*"
asgi-lifespan = "*"
blue = "*"
Faker = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
flake8-rst = "*"
httpx = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
types-orjson = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 82

[tool.blue]
line-length = 82
