[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aioredis = { extras = ["hiredis"], version = "*", allow-prereleases = true }
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
fastapi-mail = "*"
Hypercorn = "*"
loguru = "*"
orjson = "*"
passlib = { extras = ["argon2"], version = "*" }
python = "^3.9"
uvloop = "*"
tenacity = "*"
psycopg2 = "*"


[tool.poetry.dev-dependencies]
alt-pytest-asyncio = "*"
asgi-lifespan = "*"
blue = "*"
Faker = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
flake8-rst = "*"
httpx = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
types-orjson = "*"
types-Jinja2 = "*"

[tool.isort]
profile = "black"
line_length = 82

[tool.blue]
line-length = 82

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
